--- a/page10.html
+++ b/page10.html
@@ -40,7 +40,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-5"><strong>Рабочие группы</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Часть системы reFlow. Подробнее в базе знаний.<br><br>Сделано на основе чатов.<br><br>Рабочие группы созданы для решения определенных задач. Каждая группа - для своих типов. Например, IT. Или - Персонал.<br><br>В рабочие группы направляют сообщения координаторы.<br><br><em>Если в рабочую группу "прилетело" сообщение, то его необходимо обработать, согласно правилам системы reFlow.</em><br><br><em>Это работа, и она должны быть сделана именно таким образом.</em><br><br><em>Можно выполнить задачу и не обработать сообщение?</em><br><br><em>Ответ - НЕТ.</em></p>
+                            Часть системы reFlow.&nbsp;<br><br>Сделано на основе чатов.<br><br>Рабочие группы созданы для решения определенных задач. Каждая группа - для своих типов. Например, IT. Или - Персонал.<br><br>В рабочие группы направляют сообщения координаторы.<br><br><em>Если в рабочую группу "прилетело" сообщение, то его необходимо обработать, согласно правилам системы <strong>reFlow</strong>.</em><br><br><em>Это работа, и она должны быть сделана именно таким образом.</em><br><br><em>Можно выполнить задачу и не обработать сообщение?</em><br><br><em>Ответ - НЕТ.</em><br><br><a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/flow" class="text-primary" target="_blank">Подробнее в Базе знаний.</a></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-e">
                                 Назад</a></div>
                     </div>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">site</a> creator</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Start your own site with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
