--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Иван</title>
+  <title>Телеграм</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -33,14 +33,13 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
-                        <img src="assets/images/ivan-1.png" alt="Mobirise">
+                        <img src="assets/images/telegram.jpeg" alt="Mobirise">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-5"><strong>Иван</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Выглядит как простой пользователь, да и ведет себя также.<br>Но если в чате вам задаёт вопрос Иван; очень советуем вникнуть и собраться - в чате руководство.&nbsp;&nbsp;<br><br>Используется в:<br>1. В приватных чатах системы reFlow как фантом<br>2. В иных случаях (без фантома) это - реальный человек.</p>
+                        <h6 class="card-title mbr-fonts-style display-5"><strong>Подписка на телеграм</strong></h6>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4">В чатах уведомления о новых сообщениях приходят через телеграм. Разумеется, нужно иметь телефон с установленным телеграм-клиентом. В принципе, включение подписки телегам в кабинете - дело добровольное. Но разве не хочется быть постоянно online? И да, это намёк.<br><br><a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/телеграм" class="text-primary" target="_blank">Подробнее в Базе знаний</a></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-i">
                                 Назад</a></div>
                     </div>
@@ -48,7 +47,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Check this</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website <a href="https://mobirise.site/f" style="color:#aaa;">was built</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
