--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-5"><strong>База знаний</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Это наши накопленные знания. В базе уже 1000 статей.<br>Статьи описывают наши процессы.<br><br><em>Каждый может принять участие.</em><br><br>Не нашёл ответа в базе знаний? Отлично. Значит надо выяснить ответ и создать статью, тем самым разделив новую информацию со всеми.<br><br><em>Неинтересно? Думаешь, это точно не про тебя?&nbsp;</em><br><br><em>Очень печально.</em></p>
+                            Это наши накопленные знания. В базе уже 1000 статей.<br>Статьи описывают наши процессы.<br><br><em>Каждый может принять участие.</em><br><br>Не нашёл ответа в базе знаний? Отлично. Значит надо выяснить ответ и создать статью, тем самым разделив новую информацию со всеми.<br><br><em>Неинтересно? Думаешь, это точно не про тебя?&nbsp;</em><br><br><em>Очень печально.</em><br><br><em>Подробнее про Базу знаний, можно прочесть в...</em><br><em>Хм, странно. <a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/база%20з" class="text-primary" target="_blank">В Базе знаний.</a></em></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-d">
                                 Назад</a></div>
                     </div>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Make a website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Get more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
