--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>фантом</title>
+  <title>Фантом</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -40,7 +40,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-5"><strong>Фантом в чате</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            При включенной настройке - все владельцы чата выступают не под своими аватарками, а под аватаркой Ивана. Тогда твоя аватарка принимает вот такой вид.&nbsp;<br><br>Это - настройка чата. В приватных диалогах системы reFlow включается автоматически.<br><br>Когда общаешься от лица Ивана - говоришь от лица компании - это большая ответственность.<br><br><em>Нельзя создавать чаты с партнерами БЕЗ включенного опции "Фантом в чате"<br></em><br>Используется в:<br>1. Чаты<br>2. reflow</p>
+                            При включенной настройке - все владельцы чата выступают не под своими аватарками, а под аватаркой Ивана. Тогда твоя аватарка принимает вот такой вид.&nbsp;<br><br>Это - настройка чата. В приватных диалогах системы reFlow включается автоматически.<br><br>Когда общаешься от лица Ивана - говоришь от лица компании - это большая ответственность.<br><br><em>Нельзя создавать чаты с партнерами БЕЗ включенного опции "Фантом в чате"<br></em><br>Используется в:<br>1. Чаты<br>2. reflow<br><br><a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/фантом" class="text-primary" target="_blank">Подробнее в Базе знаний</a></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-i">
                                 Назад</a></div>
                     </div>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site template</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This page</a> was designed with Mobirise templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
