--- a/page8.html
+++ b/page8.html
@@ -39,7 +39,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-5"><strong>Сделаю / Выполнено</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Это часть системы reFlow. В рабочих группах можно не состоять (это решение руководителя), <br><br><em>но использовать "Запомнил/Сделаю/Выполнено" - обязательно.</em><br><br>Подробнее - в базе знаний.</p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Это часть системы reFlow. В рабочих группах можно не состоять (это решение руководителя), <br><br><em>но использовать "Запомнил/Сделаю/Выполнено" - обязательно.</em><br><br><a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/выполнил" class="text-primary" target="_blank">Подробнее в Базе знаний.</a></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-d">
                                 Назад</a></div>
                     </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">This page</a> was made with Mobirise website themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise page builder - <a href="https://mobirise.site/o" style="color:#aaa;">Go here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
