--- a/page9.html
+++ b/page9.html
@@ -40,7 +40,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-5"><strong>Чеклисты</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Это инструмент, на базе которого реализованы многие вещи в компании.<br><br><em>Подробнее описано в базе знаний.<br></em><br><em>Если вы принимаете участие в чеклисте - их заполнение обязательно. <br></em><br>Один сотрудник может обрабатывать за день много чеклистов, например 10. Чеклисты спроектированы быть удобными, возможно, к работе с ними надо привыкнуть.&nbsp;<br><br>Являясь по сути типизированными сообщениями - подчиняются тем же правилам - создание/удаление/цитирование.<br><br>Используются в:<br>1. Опросы<br>2. Отчеты<br>3. Процессы</p>
+                            Это инструмент, на базе которого реализованы многие вещи в компании.<br><br><em>Если вы принимаете участие в чеклисте - их заполнение обязательно. <br></em><br>Один сотрудник может обрабатывать за день много чеклистов, например 10. Чеклисты спроектированы быть удобными, возможно, к работе с ними надо привыкнуть.&nbsp;<br><br>Являясь по сути типизированными сообщениями - подчиняются тем же правилам - создание/удаление/цитирование.<br><br>Используются в:<br>1. Опросы<br>2. Отчеты<br>3. Процессы<br><br><a href="https://cabinet.buhanka.ru/#/refs/navigate/articles/чеклисты%202" class="text-primary" target="_blank">Подробнее в Базе знаний</a></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-danger-outline display-4" href="page2.html#features4-e">
                                 Назад</a></div>
                     </div>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">Website</a> was created with Mobirise website themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Develop a web page with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
