--- a/page2.html
+++ b/page2.html
@@ -99,7 +99,7 @@
                         <img src="assets/images/8260022b-dd8b-e53a-9170-c199124be17b.jpg" alt="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>ИВАН</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>ИВАН</strong></h5>
                         
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Это я. Это он. Это все мы.</p>
                     </div>
@@ -112,7 +112,7 @@
                         <img src="assets/images/i-1.webp" alt="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Командная работа</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Командная работа</strong></h5>
                         
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Твой личный вклад. В результат команды. Не перепутай.<br></p>
                     </div>
@@ -294,7 +294,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to set up your own website - <a href="https://mobirise.site/x" style="color:#aaa;">Go now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to set up your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Check this</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
